vest-dsl/test/bad/choice_ints_variant_overlap2.vest
uint_8 = u8

fmt(@tag: uint_8) = choose(@tag) {
  1 => u8,
  2 => u32,
  2 => u32,
}
